# URDF2mesh

./: README.md  mesh_loader.py  urdf2mesh.py
robot_descriptions/Husky/urdf/: husky.urdf
robot_descriptions/UGV/meshes/: ouster_holder_ladybug.dae
robot_descriptions/UGV/meshes/sources/: .gitignore  lb3_mount_2.blend  lb3_mount_bottom.blend
robot_descriptions/UGV/urdf/: nifti.urdf
urdf/UGV/nifti_robot_description/: CMakeLists.txt  dependencies.rosinstall  package.xml  readme.md  setup.py
urdf/UGV/nifti_robot_description/cfg/: RobotParts.cfg
urdf/UGV/nifti_robot_description/conf/robot/: .gitignore  bag-robot.yaml  ctu-robot.yaml  default-robot.yaml  dfki-robot.yaml  roma-robot.yaml  tno-robot.yaml
urdf/UGV/nifti_robot_description/launch/: display.launch  dynamic_robot_model_server.launch  load_robot_model.launch  state_publisher.launch
urdf/UGV/nifti_robot_description/meshes/: body_2021.dae  top_box_2021_ladybug.dae
urdf/UGV/nifti_robot_description/nodes/: dynamic_robot_model_server.py
urdf/UGV/nifti_robot_description/scripts/: print_robot_model.py
urdf/UGV/nifti_robot_description/src/nifti_robot_description/: render_xacro.py
urdf/UGV/nifti_robot_description/urdf/: nifti.urdf  nifti.xacro  nifti_robot.xacro  unused_payloads.xacro  utils.xacro
